@@ -12,6 +12,8 @@ git-annex (3.20110916) UNRELEASED; urgency=low
     match the specified conditions.
   * Note that this is a behavior change for git-annex find! Old behavior
     can be gotten by using: git-annex find --in .
+  * status: In --fast mode, all status info is displayed now; but some
+    of it is only approximate, and is marked as such.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 18 Sep 2011 18:25:51 -0400
 
